<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faceshot" />

            <ImageView
                android:id="@+id/faceshotImageView"
                android:layout_width="300dp"
                android:layout_height="300dp"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type" />

            <TextView
                android:id="@+id/typeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code_of_issuing_state" />

            <TextView
                android:id="@+id/stateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/passport_no" />

            <TextView
                android:id="@+id/passNoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/surname" />

            <TextView
                android:id="@+id/surnameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/given_names" />

            <TextView
                android:id="@+id/namesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nationality" />

            <TextView
                android:id="@+id/nationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth" />

            <TextView
                android:id="@+id/birthTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sex" />

            <TextView
                android:id="@+id/sexTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_issue" />

            <TextView
                android:id="@+id/issueTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/authority" />

            <TextView
                android:id="@+id/authTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minus" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_expiry" />

            <TextView
                android:id="@+id/expiryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/minus" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/downloadButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/download" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/chPassButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/change_pass" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>